ros2_ws_2/log/build_2023-07-11_08-19-42/py_srvcli/stdout_stderr.log
running egg_info
creating ../../build/py_srvcli/py_srvcli.egg-info
writing ../../build/py_srvcli/py_srvcli.egg-info/PKG-INFO
writing dependency_links to ../../build/py_srvcli/py_srvcli.egg-info/dependency_links.txt
writing entry points to ../../build/py_srvcli/py_srvcli.egg-info/entry_points.txt
writing requirements to ../../build/py_srvcli/py_srvcli.egg-info/requires.txt
writing top-level names to ../../build/py_srvcli/py_srvcli.egg-info/top_level.txt
writing manifest file '../../build/py_srvcli/py_srvcli.egg-info/SOURCES.txt'
reading manifest file '../../build/py_srvcli/py_srvcli.egg-info/SOURCES.txt'
writing manifest file '../../build/py_srvcli/py_srvcli.egg-info/SOURCES.txt'
running build
running build_py
creating /home/damoon/ROS2_Learning/ros2_ws_2/build/py_srvcli/build
creating /home/damoon/ROS2_Learning/ros2_ws_2/build/py_srvcli/build/lib
creating /home/damoon/ROS2_Learning/ros2_ws_2/build/py_srvcli/build/lib/py_srvcli
copying py_srvcli/client_member_function.py -> /home/damoon/ROS2_Learning/ros2_ws_2/build/py_srvcli/build/lib/py_srvcli
copying py_srvcli/service_member_function.py -> /home/damoon/ROS2_Learning/ros2_ws_2/build/py_srvcli/build/lib/py_srvcli
copying py_srvcli/__init__.py -> /home/damoon/ROS2_Learning/ros2_ws_2/build/py_srvcli/build/lib/py_srvcli
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
creating /home/damoon/ROS2_Learning/ros2_ws_2/install/py_srvcli/lib/python3.10/site-packages/py_srvcli
copying /home/damoon/ROS2_Learning/ros2_ws_2/build/py_srvcli/build/lib/py_srvcli/client_member_function.py -> /home/damoon/ROS2_Learning/ros2_ws_2/install/py_srvcli/lib/python3.10/site-packages/py_srvcli
copying /home/damoon/ROS2_Learning/ros2_ws_2/build/py_srvcli/build/lib/py_srvcli/service_member_function.py -> /home/damoon/ROS2_Learning/ros2_ws_2/install/py_srvcli/lib/python3.10/site-packages/py_srvcli
copying /home/damoon/ROS2_Learning/ros2_ws_2/build/py_srvcli/build/lib/py_srvcli/__init__.py -> /home/damoon/ROS2_Learning/ros2_ws_2/install/py_srvcli/lib/python3.10/site-packages/py_srvcli
byte-compiling /home/damoon/ROS2_Learning/ros2_ws_2/install/py_srvcli/lib/python3.10/site-packages/py_srvcli/client_member_function.py to client_member_function.cpython-310.pyc
  File "/home/damoon/ROS2_Learning/ros2_ws_2/install/py_srvcli/lib/python3.10/site-packages/py_srvcli/client_member_function.py", line 10
    def __init_(self);
                     ^
SyntaxError: expected ':'

byte-compiling /home/damoon/ROS2_Learning/ros2_ws_2/install/py_srvcli/lib/python3.10/site-packages/py_srvcli/service_member_function.py to service_member_function.cpython-310.pyc
byte-compiling /home/damoon/ROS2_Learning/ros2_ws_2/install/py_srvcli/lib/python3.10/site-packages/py_srvcli/__init__.py to __init__.cpython-310.pyc
running install_data
Sorry: IndentationError: unindent does not match any outer indentation level (service_member_function.py, line 28)
creating /home/damoon/ROS2_Learning/ros2_ws_2/install/py_srvcli/share/ament_index
creating /home/damoon/ROS2_Learning/ros2_ws_2/install/py_srvcli/share/ament_index/resource_index
creating /home/damoon/ROS2_Learning/ros2_ws_2/install/py_srvcli/share/ament_index/resource_index/packages
copying resource/py_srvcli -> /home/damoon/ROS2_Learning/ros2_ws_2/install/py_srvcli/share/ament_index/resource_index/packages
copying package.xml -> /home/damoon/ROS2_Learning/ros2_ws_2/install/py_srvcli/share/py_srvcli
running install_egg_info
Copying ../../build/py_srvcli/py_srvcli.egg-info to /home/damoon/ROS2_Learning/ros2_ws_2/install/py_srvcli/lib/python3.10/site-packages/py_srvcli-0.0.0-py3.10.egg-info
running install_scripts
Installing client script to /home/damoon/ROS2_Learning/ros2_ws_2/install/py_srvcli/lib/py_srvcli
Installing service script to /home/damoon/ROS2_Learning/ros2_ws_2/install/py_srvcli/lib/py_srvcli
writing list of installed files to '/home/damoon/ROS2_Learning/ros2_ws_2/build/py_srvcli/install.log'
